website Configurtion updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Zahra Alizadeh",
-  "name": "Zahra Alizadeh Website",
+  "name": "Zahra Alizadeh Portfolio Website",
   "icons": [
     {
       "src": "favicon.ico",
